feat: [UPDATE] Switching from Qodana to Sonar